[package]
name = "vulkano-framing"
description = "Uploading images to and downloading frames from the GPU."
license = "MIT"
version = "0.2.1"
authors = ["Ram <quadrupleslap@gmail.com>"]
repository = "https://github.com/endogeny/vulkano-framing"
documentation = "https://docs.rs/vulkano-framing"

[dependencies]
framing = "0.3"
vulkano = "0.5"

[dev-dependencies]
png-framing = "0.3"
vulkano-shader-derive = "0.5"
